Implement Array method and search

--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
+    <style>
+    </style>
 </head>
+
 <body>
-    
-    <script src=""></script>
+    <!-- Array -->
+    <p id="demo"></p>
+    <p id="cars"></p>
+    <p id="index"></p>
+    <p id="audi"></p>
+    <p id="type"></p>
+
+    <!-- Array methods -->
+
+    <p id="length"></p>
+    <p id="tostring"></p>
+    <p id="at"></p>
+    <p id="join"></p>
+    <p id="pop"></p>
+    <p id="push"></p>
+    <p id="shift"></p>
+    <p id="unshift"></p>
+    <p id="delete"></p>
+    <p id="concat"></p>
+    <p id="copywithin"></p>
+    <p id="flat"></p>
+    <p id="flatmap"></p>
+    <p id="slice"></p>
+    <p id="splice"></p>
+    <p id="tospliced"></p>
+
+    <!-- Array Search Methods -->
+    <p id="indexof"></p>
+    <p id="lastindexof"></p>
+    <p id="includes"></p>
+    <p id="find"></p>
+    <p id="findindex"></p>
+    <p id="findlast"></p>
+    <p id="findlastindex"></p>
+
+
+
+    <script src="array.js"></script>
 </body>
+
 </html>
