Array sort and Iterations

--- a/index.html
+++ b/index.html
@@ -45,6 +45,36 @@
     <p id="findlast"></p>
     <p id="findlastindex"></p>
 
+    <!-- Array Sort -->
+    <!-- Alphabetic Sort -->
+    <p id="sort"></p>
+    <p id="reverse"></p>
+    <p id="tosorted"></p>
+    <p id="toreversed"></p>
+
+    <!-- Numeric Sort -->
+    <p id="numeric_sort"></p>
+    <p id="random_sort"></p>
+    <p id="math_min"></p>
+    <p id="math_max"></p>
+    <p id="home_mad_min"></p>
+    <p id="home_mad_max"></p>
+
+    <!-- Array Iteration Methods -->
+    <p id="foreach"></p>
+    <p id="map"></p>
+    <p id="filter"></p>
+    <p id="reduce"></p>
+    <p id="reduceright"></p>
+    <p id="every"></p>
+    <p id="some"></p>
+    <p id="from"></p>
+    <p id="keys"></p>
+    <p id="entries"></p>
+    <p id="with"></p>
+    <p id="spread"></p>
+    <p id="rest"></p>
+
 
 
     <script src="array.js"></script>
