Array Iterations , Array Const, Date Objects, Date Formats, Get Date Methods

--- a/index.html
+++ b/index.html
@@ -75,6 +75,32 @@
     <p id="spread"></p>
     <p id="rest"></p>
 
+    <!-- JavaScript Date Objects -->
+    <p id="date"></p>
+    <p id="a"></p>
+    <p id="b"></p>
+    <p id="todatestring"></p>
+    <p id="toutcstring"></p>
+    <p id="toisostring"></p>
+
+    <!-- JavaScript Date Formats -->
+    <p id="parse"></p>
+
+    <!-- JavaScript Get Date Methods -->
+    <p id="getfullyear"></p>
+    <p id="getmonth"></p>
+    <p id="getdate"></p>
+    <p id="gethours"></p>
+    <p id="getminutes"></p>
+    <p id="getseconds"></p>
+    <p id="getmilliseconds"></p>
+    <p id="getday"></p>
+    <p id="gettime"></p>
+    <p id="now"></p>
+    <p id="gettimezoneoffset"></p>
+
+
+
 
 
     <script src="array.js"></script>
