store data in localstorage and display it onload

--- a/practical-1.html
+++ b/practical-1.html
@@ -211,20 +211,23 @@
                 <input id="datainput" class="need" type="text" placeholder="What do you need to do?">
                 <button id="addbutton" class="button">ADD</button>
             </div>
-
         </section>
         <section class="container">
             <div class="list">
                 <div id="todolist">
-                    <!-- <div class="form">
+                    <span id="removeelement"> 
+                        <!-- <div class="form">
                         <label class="radio">Personal Work No. 1
                             <input class="input" type="checkbox" name="radio">
                             <span class="checkmark"></span>
                         </label>
+                    <div>
                         <button class="button">
                             <img src="./images/delete.svg" alt="delete">
                         </button>
+                    </div>
                     </div> -->
+                    </span>
                 </div>
                 <p id="show"></p>
                 <div class="remove">
