making delete button work

--- a/practical-1.html
+++ b/practical-1.html
@@ -215,28 +215,28 @@
         <section class="container">
             <div class="list">
                 <div id="todolist">
-                    <span id="removeelement"> 
+                    <span >
                         <!-- <div class="form">
                         <label class="radio">Personal Work No. 1
                             <input class="input" type="checkbox" name="radio">
                             <span class="checkmark"></span>
                         </label>
                     <div>
-                        <button class="button">
+                        <button onclick="deleteitem()" class="button">
                             <img src="./images/delete.svg" alt="delete">
                         </button>
                     </div>
                     </div> -->
-                    </span>
+                   </span>
                 </div>
                 <p id="show"></p>
-                <div class="remove">
+                <div class="remove" onclick="">
                     <img src="./images/remove.svg" alt="remove" width="28px" height="34px">
                     <p class="clear">Clear Completed</p>
                 </div>
             </div>
         </section>
-    </main>
+    </main> 
     <script src="practical-1.js"></script>
 </body>
 
