change file name

--- a/todo-list.html
+++ b/todo-list.html
@@ -237,7 +237,7 @@
             </div>
         </section>
     </main> 
-    <script src="practical-1.js"></script>
+    <script src="todo-list.js"></script>
 </body>
 
 </html>
