edit button done and clear all element on clear button done

--- a/todo-list.html
+++ b/todo-list.html
@@ -188,6 +188,7 @@
             margin-right: 76px;
             gap: 10px;
             align-items: center;
+            cursor: pointer;
         }
 
         .clear {
@@ -230,7 +231,7 @@
                    </span>
                 </div>
                 <p id="show"></p>
-                <div class="remove" onclick="">
+                <div class="remove" onclick="emptyarray()">
                     <img src="./images/remove.svg" alt="remove" width="28px" height="34px">
                     <p class="clear">Clear Completed</p>
                 </div>
