--- a/tic_tac_toe.html
+++ b/tic_tac_toe.html
@@ -25,7 +25,7 @@
         }
 
         .flex button {
-            padding:30px 30px;
+            padding: 30px 30px;
             margin: 2px;
             cursor: pointer;
             font-size: 20px;
@@ -66,7 +66,7 @@
         <button class="box"></button>
     </div>
     <div class="for">
-        <h2 id="winner">Winner : </h2>
+        <h2>Winner : <span id="winner"></span> </h2>
         <button class="restart">RESTART GAME</button>
     </div>
 
